--- a/how-it-works.html
+++ b/how-it-works.html
@@ -74,7 +74,7 @@
         <a href="how-it-works.html" class="text-nura-teal font-semibold">How it works</a>
         <a href="index.html#about" class="text-nura-charcoal hover:text-nura-teal font-medium">About</a>
         <a href="index.html#blog" class="text-nura-charcoal hover:text-nura-teal font-medium">Blog</a>
-        <a href="index.html#faq" class="text-nura-charcoal hover:text-nura-teal font-medium">FAQ</a>
+        <a href="index.html#faq" class="text-nura-charcoal hover:text-nura-teal font-medium">FAQ's</a>
       </div>
       
       <div class="hidden md:block">
@@ -361,4 +361,5 @@
     });
   </script>
 </body>
+
 </html>
