--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       
       <div class="hidden md:block">
         <button class="btn-gradient text-white px-6 py-3 rounded-full font-semibold shadow-lg">
-          Get Started
+          Get Started Now!
         </button>
       </div>
       
@@ -152,7 +152,7 @@
         <a href="#blog" class="text-nura-charcoal hover:text-nura-teal font-medium">Blog</a>
         <a href="#faq" class="text-nura-charcoal hover:text-nura-teal font-medium">FAQ</a>
         <button class="btn-gradient text-white px-6 py-3 rounded-full font-semibold w-full shadow-lg">
-          Get Started
+          Get Started Now
         </button>
       </div>
     </div>
