--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Nura BioHealth - Better health with care built around you. Certified providers, in-house pharmacy, personalized care at affordable prices.">
-  <title>Nura BioHealth - Better health with care built around you</title>
+  <title>Nura BioHealth</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -104,7 +104,7 @@
       <div class="flex items-center space-x-2">
         <div class="w-10 h-10 bg-nura-teal rounded-lg flex items-center justify-center">
           <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path>
           </svg>
         </div>
         <a href="index.html" class="text-2xl font-bold text-nura-teal">Nura<span class="text-nura-charcoal"> BioHealth</span></a>
@@ -133,7 +133,7 @@
       
       <div class="hidden md:block">
         <button class="btn-gradient text-white px-6 py-3 rounded-full font-semibold shadow-lg">
-          Get Started Now!
+          Get Started
         </button>
       </div>
       
@@ -152,7 +152,7 @@
         <a href="#blog" class="text-nura-charcoal hover:text-nura-teal font-medium">Blog</a>
         <a href="#faq" class="text-nura-charcoal hover:text-nura-teal font-medium">FAQ</a>
         <button class="btn-gradient text-white px-6 py-3 rounded-full font-semibold w-full shadow-lg">
-          Get Started Now
+          Get Started
         </button>
       </div>
     </div>
@@ -164,9 +164,9 @@
       <div class="grid md:grid-cols-2 gap-12 items-center">
         <div class="max-w-2xl">
           <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold leading-tight mb-5">
-            Better health,<br>
-            with care built<br>
-            around <span class="text-gradient">you.</span>
+            Science and Biotechnology<br>
+            backed Health and Wellness
+             <span class="text-gradient">you.</span>
           </h1>
           <p class="text-base md:text-lg text-nura-gray mb-6 leading-relaxed">
             A seamless blend of certified providers, in-house pharmacy, and personalized care at prices you'll love.
